--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
   "bugs": {
     "url": "https://github.com/VerstSiu/statement-builder/issues"
   },
-  "homepage": "https://github.com/VerstSiu/statement-builder#readme"
+  "homepage": "https://github.com/VerstSiu/statement-builder#readme",
+  "private": true
 }
